syntax = "proto3";

package student;

option go_package = "./student";

// 创建
message CreateRequest {
    string Name = 1;
    string StuNo = 2;
}
message CreateResponse {
	int64 id = 1;
}
// 创建

// 修改
message UpdateRequest {
    int64 id = 1;
    string Name = 2;
    string StuNo = 3;
}
message UpdateResponse {
}
// 修改

// 删除
message RemoveRequest {
    int64 id = 1;
}
message RemoveResponse {
}
// 删除

// 详情
message DetailRequest {
    int64 id = 1;
}
message DetailResponse {
    int64 id = 1;
    string Name = 2;
    string StuNo = 3;
}
// 详情

service student {
    rpc Create(CreateRequest) returns(CreateResponse);
    rpc Update(UpdateRequest) returns(UpdateResponse);
    rpc Remove(RemoveRequest) returns(RemoveResponse);
    rpc Detail(DetailRequest) returns(DetailResponse);
}
